<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/welcomeScreen"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detailFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="@dimen/default_weight"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_placeholder"
            android:layout_marginBottom="@dimen/default_weight"
            android:padding="@dimen/default_weight"
            android:background="@drawable/border"
            android:inputType="phone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/btn_continue" />
    </LinearLayout>

</LinearLayout>
