<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/welcomeScreen"
    android:background="@drawable/login_bg"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center" />

    <LinearLayout
        android:id="@+id/detailFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_margin="@dimen/default_weight"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_placeholder"
            android:layout_marginBottom="@dimen/default_weight"
            android:padding="@dimen/default_weight"
            android:background="@drawable/border"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_placeholder"
            android:layout_marginBottom="@dimen/default_weight"
            android:padding="@dimen/default_weight"
            android:background="@drawable/border"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>
